# huggingface-repo-downloader

./: .gitignore  README.md  build_exe.bat  pyproject.toml  run_hf_downloader.bat
.github/workflows/: build-windows-exe.yml
hf_downloader/: __init__.py  auth.py  formatting.py  hf_service.py  logging_utils.py  main.py  models.py  parsing.py  progress.py  queue_manager.py  repo_analysis.py  settings.py  tree_ops.py  ui.py
tests/: conftest.py  test_hf_service.py  test_parsing.py  test_progress.py  test_queue.py  test_repo_analysis.py  test_tree_ops.py  test_ui.py
tools/: build_exe.ps1
